# arca

./: .gitignore  README.md  arca_output.json  extract.py  requirements.txt  run_pipeline.py
backend/: .env.example  .gitignore  001_init.sql  auth.py  config.py  main.py  requirements.txt  run_pipeline.py  run_pipeline_streaming.py
backend/arca/: arca_output.json  arca_output_routed.json  extract.py
backend/db/: crud.py  database.py  models.py  schemas.py
backend/map_agent/: arca_output_routed.json  extract.py  pyproject.toml
backend/routing_agent/: README.md  embedding_router.py  enrich_taxonomy.py  generate_ground_truth.py  keyword_matcher.py  llm_router.py  routing_agent.py  routing_rules.json  routing_rules.json.pre_enrichment_backup  rules_store.py  seed_rules.py  taxonomy_store.py  test_routing.py  verify_production_agent.py
backend/validation_agent/: README.md  __init__.py  evidence_aligner.py  obligation_intel.py  validation_agent.py  verdict_synthesizer.py
frontend/: ARCA_Frontend_Design_Doc.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  PDFViewer.tsx  Pagination.tsx  ProtectedRoute.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: auth.ts
frontend/src/pages/: AIValidationsPage.tsx  AccuracyPage.tsx  AuditPage.tsx  CircularsPage.tsx  DashboardPage.tsx  DepartmentHeadPortal.tsx  DepartmentsPage.tsx  LandingPage.tsx  MAPReviewPage.tsx  MyTasksPage.tsx  NotFoundPage.tsx  (+2 more)
(+8 files in other folders)
