[project]
name = "arca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.102.2",
    "fastapi>=0.137.1",
    "fastembed>=0.8.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
